--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   
-  <div class="background-video"></div>
+  <div class="background-video container-fluid">
     <video width height="637" autoplay muted>
       <source src="/static/images/tree_2.mp4" type="video/mp4">
     </video>
@@ -51,9 +51,9 @@
 
       
    
-<div class="container-fluid"></div>
+<div class="container-fluid">
+  <div class="row">
 <!-- Button trigger modal Create User -->
-  <div id="home_button_bar" class="row">
     <div class="col-2 offset-8">
       <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#create-user">
         Create Account
