--- a/templates/shared-user-page.html
+++ b/templates/shared-user-page.html
@@ -45,7 +45,7 @@
             <div class="col">
 
                 <button id={{entry.week}} type="button" class="collapsible complete-entry"> Week {{entry.prompt.week}} : {{entry.prompt.prompt}} </button>
-                <div id='user_entry_coll' class="content">
+                <div id='entry_{{entry.week}}' class="content">
                     <p class="entry" id="display_entry_text"> {{entry.user_entry}}</p>
                 </div>
             </div>
