--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -10,7 +10,7 @@
     <div class="col-4">  
         <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
     </div>
-    <div class="col-1 text-right">  
+    <div class="col-1">  
         <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
     </div>
 {% endblock %}
@@ -24,8 +24,8 @@
 {% block content %} 
 
     <div class="container-fluid">
-        <div class="row">
-            <div id="user-prompts" class="col"></div>
+        <div class="row flex justify-content-center">
+            <div id="user-prompts" class="col-11"></div>
         </div>
     </div>
         
