--- a/templates/community.html
+++ b/templates/community.html
@@ -7,17 +7,17 @@
 {% endblock %}
 
 {% block nav %}
-    <div class="col-4">  
+    <div>  
         <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
     </div>
-    <div class="col-3">  
+    <div>  
         <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
     </div>
-    <div class="col-4">  
-        <a class="nav-link active" aria-current="page" href="/community"><span style="color: rgb(101, 157, 101)"><img src="/static/images/community.png" alt="pen img" width=40px height=40px>Community</span></a>
+    <div>
+        <a class="nav-link active" aria-current="page" href="/community"><span style="color: maroon"><img src="/static/images/r_community.png" alt="pen img" width=40px height=40px>Community</span></a>
     </div>
-    <div class="col-1 text-right">  
-        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+    <div>  
+        <a class="nav-link active" aria-current="page" href="/logout"><span><img src="/static/images/b_logout.png" alt="book img" width=30px height=30px>Logout</span></a>
     </div>
 {% endblock %}
 
