--- a/templates/my-journal.html
+++ b/templates/my-journal.html
@@ -7,18 +7,18 @@
 {% endblock %}
 
 {% block nav %}
-    <div class="col-4">  
+    <div>  
         <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
     </div>
-    <div class="col-3">  
-        <a class="nav-link active" aria-current="page" href="/my-journal"><span style="color: maroon"><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
+    <div>  
+        <a class="nav-link active" aria-current="page" href="/my-journal"><span style="color: maroon"><img src="/static/images/r_read.png" alt="book img" width=40px height=40px>Journal</span></a> 
     </div>
-    <div class="col-4">  
+    <div>  
         <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
         <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
     </div>
-    <div class="col-1 text-right">  
-        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+    <div>  
+        <a class="nav-link active" aria-current="page" href="/logout"><span><img src="/static/images/b_logout.png" alt="book img" width=30px height=30px>Logout</span></a>
     </div>
 {% endblock %}
 
