--- a/templates/community.html
+++ b/templates/community.html
@@ -7,16 +7,16 @@
 {% endblock %}
 
 {% block nav %}
-    <div>  
+    <div class="navbar_link">   
         <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
     </div>
-    <div>  
+    <div class="navbar_link">  
         <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
     </div>
-    <div>
+    <div class="navbar_link"> 
         <a class="nav-link active" aria-current="page" href="/community"><span style="color: maroon"><img src="/static/images/r_community.png" alt="pen img" width=40px height=40px>Community</span></a>
     </div>
-    <div>  
+    <div class="navbar_link">  
         <a class="nav-link active" aria-current="page" href="/logout"><span><img src="/static/images/b_logout.png" alt="book img" width=30px height=30px>Logout</span></a>
     </div>
 {% endblock %}
