--- a/templates/shared-user-page.html
+++ b/templates/shared-user-page.html
@@ -8,16 +8,16 @@
 
 
 {% block nav %}
-    <div>  
+    <div class="navbar_link">  
         <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
     </div>
-    <div>  
+    <div class="navbar_link"> 
         <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
     </div>
-    <div>  
+    <div class="navbar_link"> 
         <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
     </div>
-    <div>  
+    <div class="navbar_link">  
         <a class="nav-link active" aria-current="page" href="/logout"><span><img src="/static/images/b_logout.png" alt="book img" width=30px height=30px>Logout</span></span></a>
     </div>
 {% endblock %}
