--- a/templates/my-journal.html
+++ b/templates/my-journal.html
@@ -3,7 +3,7 @@
 {% block title %} {{user.fname}}'s Journal {% endblock %}
 
 {% block body %}
-    <body id="my_journal_body" style="background-image: '/static/images/path.jpeg'">
+    <body id="my_journal_body">
 {% endblock %}
 
 {% block nav %}
