--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,32 +39,32 @@
   </div>
       <!-- <img id="home_img" class="bg-image" src='/static/images/mind.png' > -->
 
-         
 
-<div class="modal-btn">
-  <div class="row">
-
+<div class="container" style="display: flex; justify-content: flex-end;">
+  <div style="display: flex; justify-content: flex-end;">
     <!-- Button modal Login -->
-    <div class="col-2 offset-8">
+    <div class="modal-btn">
       <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#user-login">
         Log In
       </button>
     </div>
     
 <!-- Button trigger modal Create User -->
-    <div class="col-2">
+    <div class="modal-btn">
       <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#create-user">
         Create Account
       </button>
     </div>
   </div>
-</div>
+</div> 
 
 
-    <div class="overlay">
+<div class="title-container">
+  <div class="title-container-2" >
       <h1 id="login_title_1">Mindful Growth</h1>
      <h2 id="login_title"></h2>
-    </div>
+  </div>
+</div>
   
 
  <!-- Modal Create User -->
@@ -106,15 +106,18 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-1 col-sm-6">
-                <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+            <div class="container" style="display: flex; justify-content: flex-end;">
+              <div style="display: flex; justify-content: flex-end;">
+                <div class="inner-modal-btn-create"></div>
+                  <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+                </div>
               </div>
-              <div class="col-1 col-sm-6">
+              <div class="inner-modal-btn-create">
                 <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Create Account</button>
               </div>  
             </div>
-          </form>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -139,13 +142,15 @@
             <label for="user_password" class="form-label">Password:</label>
             <input type="password" name="password" class="form-control" id="user_password" required/>
           </div>
-          <div class="row">
-            <div class="col-1 col-sm-6">
-              <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+          <div class="container" style="display: flex; justify-content: flex-end;">
+            <div style="display: flex; justify-content: flex-end;">
+              <div class="inner-modal-btn"></div>
+                <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+              </div>
+              <div class="inner-modal-btn">
+                <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Log In</button>
+              </div>
             </div>
-            <div class="col-1 col-sm-6">
-              <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Log In</button>
-            </div>  
           </div>
         </form>
       </div>
